Article parsing and more stuff

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,10 @@ gunicorn
 # Vowel Dependencies
 #----------------------
 flask-security
+requests
+
+#---------------------
+# Dev Depedencies
+#---------------------
+bpython
 flask-debugtoolbar
